--- a/Developpement/templates/quatuor/quatuor_extrait.html
+++ b/Developpement/templates/quatuor/quatuor_extrait.html
@@ -6,6 +6,7 @@
 <div class="page_extrait">
   {% for elem3 in elem2 %}
   <div class="extrait">
+    <span id = "glyph-music" class="glyphicon glyphicon-music"></span>
     <div class="col-sm-3" id = "titre-descr">
       <h2>{{ elem3[0] }}</h2>
       <p>{{ elem3[1] }}</p>
@@ -13,10 +14,9 @@
     <div class="col-sm-3" id = "audio-download">
     <audio controls>
       <source src="{{ url_for('static',filename='audio/extrait/'+elem3[2])}}" type="audio/mpeg">
-        Your browser does not support the audio element.
       </audio>
       <br>
-      <a href="{{ url_for('static',filename='partition/'+elem3[3])}}" download="{{ elem3[3] }}">Télécharger la partition</a>
+      <a href="{{ url_for('static',filename='partition/'+elem3[3])}}" download="{{ elem3[3] }}"><span id = "glyph" class="glyphicon glyphicon-download-alt"></span></a>
     </div>
     </div>
   {% endfor %}
