--- a/Developpement/templates/administration/administration_gestionFichiers.html
+++ b/Developpement/templates/administration/administration_gestionFichiers.html
@@ -13,5 +13,8 @@
     <a href="/administration/gestionFichiers/articles/"><input type="submit" id="submit" class="btn btn-default" value="Articles"></a>
   </div>
 </div>
+{% block fichier %}
+
+{% endblock %}
 
 {% endblock %}
