--- a/Developpement/templates/administration/administration_gestionFichiers_articles.html
+++ b/Developpement/templates/administration/administration_gestionFichiers_articles.html
@@ -1,5 +1,5 @@
 {% extends "administration/administration_gestionFichiers.html" %}
-{% block main %}
+{% block fichier %}
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/css/administration/administration_gestionStagiaires.css')}}">
 <div class="liens">
   <h1 id="hliens">Gestion des articles</h1>
