--- a/Developpement/templates/stage/stage_inscription_basic.html
+++ b/Developpement/templates/stage/stage_inscription_basic.html
@@ -37,7 +37,7 @@
           <div class="form-group">
             <label for="tel1Pers">{{ persForm.tel1Pers.label }}</label>
             <div>
-                {{ persForm.tel1Pers(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
+                {{ persForm.tel1Pers(size=50, class_="form-control", type="tel", pattern="[0-9]{10}", placeholder="0633592090")}}
             </div>
           </div>
           <div class="form-group">
