--- a/Developpement/templates/stage/stage_inscription_parental.html
+++ b/Developpement/templates/stage/stage_inscription_parental.html
@@ -36,19 +36,28 @@
             <div class="form-group">
               <label for="telPers">{{ respLegForm.telPers.label }}</label>
               <div>
-                {{ respLegForm.telPers(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
+                {{ respLegForm.telPers(size=50, class_="form-control", type="tel", pattern="[0-9]{10}", placeholder="0633592090")}}
               </div>
             </div>
             <div class="form-group">
               <label for="telTrav">{{ respLegForm.telTrav.label }}</label>
               <div>
-                {{ respLegForm.telTrav(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
+                {{ respLegForm.telTrav(size=50, class_="form-control", type="tel", pattern="[0-9]{10}", placeholder="06-33-59-20-90")}}
               </div>
             </div>
             <div class="form-group">
               <label for="mailPers">{{ respLegForm.mailPers.label }}</label>
               <div>
                 {{ respLegForm.mailPers(size=50, class_="form-control", type="email", pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$", placeholder="liam.demarest@orange.fr")}}
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="dateNPers">{{ respLegForm.dateNPers.label }}</label>
+              <div>
+                {{ respLegForm.dateNPers(size=50, class_="form-control", type="date", id="date")}}
+                {% if ageError %}
+                <p class="text-danger">Le responsable legal doit être majeur</p>
+                {% endif %}
               </div>
             </div>
             <div class="form-group">
