ajout de la route modif articles

--- a/Developpement/templates/administration/administration_gestionFichiers_images.html
+++ b/Developpement/templates/administration/administration_gestionFichiers_images.html
@@ -5,6 +5,7 @@
   <h1 id="hliens">Gestion des Images</h1>
   <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
 </div>
+<div class="">
       <table class="table">
         <thead>
           <tr>
@@ -54,4 +55,5 @@
             <input id="fileupload" type="file" name="files[]" multiple="">
         </span>
       </div>
+  </div>
 {% endblock %}
