--- a/Developpement/static/styles/css/quatuor/quatuor_presse_all.css
+++ b/Developpement/static/styles/css/quatuor/quatuor_presse_all.css
@@ -20,18 +20,18 @@
 .liste-article{
   margin-top: 5%
 }
-.presse-impaire{
-  background-color: rgba(175, 175, 175, 0.73);
-  border-radius: 1.5%;
-}
 .presse-impaire h3{
-  text-align: right;
+  text-align: center;
 }
-.presse-paire{
-  background-color: rgba(175, 175, 175, 0.52);
-  border-radius: 1.5%;
+.presse-titre{
+  background-color: #fafdef;
+  text-align: center;
 }
 .center{
   text-align: center;
 }
- 
+
+h3{
+  font-weight: bold;
+  text-align: center;
+}
