--- a/Developpement/static/styles/css/administration/administration_gestionVideos.css
+++ b/Developpement/static/styles/css/administration/administration_gestionVideos.css
@@ -24,9 +24,9 @@
 }
 
 td{
-  background-color: rgba(242, 242, 242, 0.49);
+  background-color: rgba(242, 242, 242);
   text-align: center;
-  
+
 }
 
 th{
