--- a/Developpement/static/styles/css/clarinette/clarinette_historique.css
+++ b/Developpement/static/styles/css/clarinette/clarinette_historique.css
@@ -1,19 +1,44 @@
-.titre-gpartie{
+/* .titre-gpartie{
   text-align: center;
   margin-bottom: 10%;
-}
-.presentation-div{
-  display: flex;
-  margin-bottom: 5%
-}
-.presentation-img{
-  height: 100%;
-  width: 100%;
+} */
+
+/* .presentation-img{
+  height: 20%;
+  width: 20%;
   border-radius: 5%;
   margin-right: 2.5%;
   margin-left: 2.5%;
+} */
+.well{
+  background-color: lightgrey;
+  border-color: lightgrey;
+  border-radius: 30px;
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+  display: flex;
 }
+h1{
+  text-align: center;
+}
+
 .presentation-text{
+  text-align: justify;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+.presentation-img-titre{
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
+.presentation-img{
+  max-width: 20%;
+  max-height: 20%;
+  min-width: 20%;
+  min-height: 20%;
+}
+/* .presentation-text{
   font-family: Verdana,sans-serif;
   font-size: 15px;
-}  
+}   */
