--- a/Developpement/templates/clarinette/clarinette_historique.html
+++ b/Developpement/templates/clarinette/clarinette_historique.html
@@ -2,25 +2,23 @@
 {% block main %}
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/css/clarinette/clarinette_historique.css')}}">
 <div class="quatuor-clarinette">
-  <h1 class="titre-gpartie">Présentation de la clarinette</h1>
-  <div class="presentation-gdiv">
-    <div class="presentation-div">
-      <img class="presentation-img" src="{{ url_for('static',filename='img/clarinette.jpg') }}" alt="">
+    <h1 class="titre-gpartie">Présentation de la clarinette</h1>
+    <div class="well">
+      <img class="presentation-img-titre img-thumbnail img-rounded" src="{{ url_for('static',filename='img/clarinette.jpg') }}" alt="">
       <div class="presentation-text">
         <p>La clarinette est un instrument de musique à vent de la famille des bois caractérisée par son anche simple et sa perce quasi cylindrique.
-          Elle a été créée vers 1690 par Johann Christoph Denner (1655-1707) à Nuremberg sur la base d'un instrument à anche simple plus ancien : le « chalumeau ».
-          La clarinette soprano est le modèle le plus commun.
-          La perce cylindrique de la clarinette la distingue du hautbois et du saxophone, tous deux à perce conique, et lui confère une aptitude au quintoiement.
-          Son timbre chaud dans le registre grave, peut s'avérer extrêmement brillant voire perçant dans l'aigu.
-          De tous les instruments à vent de sa famille, la clarinette possède la plus grande tessiture avec trois octaves plus une sixte mineure, soit 45 notes en tout.
-          Elle se décline en une famille d'instruments presque tous transpositeurs, depuis la clarinette contrebasse jusqu'à la clarinette sopranino, couvrant ainsi toute l'étendue d'un orchestre symphonique.
-          À l'exception des percussions, la clarinette est l'instrument qui possède la plus grande famille.
-          Cet instrument est utilisé dans la musique classique et traditionnelle ainsi qu'en jazz et en musique contemporaine.
-          Parmi les compositions célèbres pour clarinette, on peut citer le Concerto pour clarinette de Mozart. </p>
+          <br>Elle a été créée vers 1690 par Johann Christoph Denner (1655-1707) à Nuremberg sur la base d'un instrument à anche simple plus ancien : le « chalumeau ». La clarinette soprano est le modèle le plus commun.
+          <br>La perce cylindrique de la clarinette la distingue du hautbois et du saxophone, tous deux à perce conique, et lui confère une aptitude au quintoiement.
+          <br>Son timbre chaud dans le registre grave, peut s'avérer extrêmement brillant voire perçant dans l'aigu.
+          <br>De tous les instruments à vent de sa famille, la clarinette possède la plus grande tessiture avec trois octaves plus une sixte mineure, soit 45 notes en tout.
+          <br>Elle se décline en une famille d'instruments presque tous transpositeurs, depuis la clarinette contrebasse jusqu'à la clarinette sopranino, couvrant ainsi toute l'étendue d'un orchestre symphonique.
+          <br>A l'exception des percussions, la clarinette est l'instrument qui possède la plus grande famille.
+          <br>Cet instrument est utilisé dans la musique classique et traditionnelle ainsi qu'en jazz et en musique contemporaine.
+          <br>Parmi les compositions célèbres pour clarinette, on peut citer le Concerto pour clarinette de Mozart. </p>
       </div>
     </div>
     <h1 class="titre-gpartie">Historique de la clarinette</h1>
-    <div class="presentation-div">
+    <div class="well">
       <div class="presentation-text">
         <p>Omitto iuris dictionem in libera civitate contra leges senatusque
           consulta; caedes relinquo; libidines praetereo, quarum acerbissimum
@@ -30,10 +28,10 @@
           Nec haec idcirco omitto, quod non gravissima sint, sed quia nunc
           sine teste dico.</p>
       </div>
-      <img class="presentation-img" src="{{ url_for('static',filename='img/clarinette2.jpg') }}" alt="">
+      <img class="presentation-img img-thumbnail img-rounded" src="{{ url_for('static',filename='img/clarinette2.jpg') }}" alt="">
     </div>
-    <div class="presentation-div">
-      <img class="presentation-img" src="{{ url_for('static',filename='img/clarinette.jpg') }}" alt="">
+    <div class="well">
+      <img class="presentation-img img-thumbnail img-rounded" src="{{ url_for('static',filename='img/clarinette.jpg') }}" alt="">
       <div class="presentation-text">
         <p>Omitto iuris dictionem in libera civitate contra leges senatusque
           consulta; caedes relinquo; libidines praetereo, quarum acerbissimum
@@ -42,9 +40,7 @@
           abiecisse et morte voluntaria necessariam turpitudinem depulisse.
           Nec haec idcirco omitto, quod non gravissima sint, sed quia nunc
           sine teste dico.</p>
-
       </div>
     </div>
-  </div>
 </div>
 {% endblock %}
