--- a/Developpement/static/styles/css/quatuor/quatuor_presse_actu.css
+++ b/Developpement/static/styles/css/quatuor/quatuor_presse_actu.css
@@ -18,7 +18,6 @@
   margin-top: 10%;
 }
 .carousel-caption{
-  opacity: 100;
   color: rgb(73, 73, 73);
 }
 #myCarousel{
@@ -30,6 +29,16 @@
   border-radius: 10px;
 }
 #actu{
-  color: rgba(255, 255, 255, 0.95)
+  color: rgba(255, 255, 255, 0.95);
 }
- 
+#fleche{
+  color: #fafdef;
+}
+h1{
+  text-align: center;
+  padding-bottom: 2%;
+  padding-top:2%; 
+}
+#slide{
+  opacity: 1;
+}
