--- a/Developpement/static/styles/css/quatuor/quatuor_presse_all.css
+++ b/Developpement/static/styles/css/quatuor/quatuor_presse_all.css
@@ -20,15 +20,38 @@
 .liste-article{
   margin-top: 5%
 }
-.presse-impaire h3{
-  text-align: center;
-}
 .presse-titre{
   background-color: #fafdef;
   text-align: center;
+  border-style: solid;
+  margin-top: -1.5%;
+  margin-bottom: 5%;
+  width: 97%;
+}
+
+.presse-titre a{
+  color: black;
+}
+#parag-long{
+  margin-top: 2.5%;
 }
 .center{
   text-align: center;
+}
+
+.pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
+    z-index: 3;
+    color: #fff;
+    cursor: default;
+    background-color: black;
+    border-color: black;
+}
+.pagination li a{
+  color: black
+}
+
+.next a, .previous a{
+  color: black;
 }
 
 h3{
